name:                yoctolens
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/yoctolens#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Chan
maintainer:          matt@parametri.city
copyright:           2017 Matthew Chan
category:            Data, Lenses
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Lens.Yocto
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/themattchan/yoctolens
